syntax = "proto3";

package notification;

option go_package = "leadIt.notification.v1;notificationv1";
import "google/api/annotations.proto";

service Notification {
  rpc sendEmailNotification(EmailNotificationRequest) returns (EmailNotificationResponse) {
    option (google.api.http) = {
      post: "/v1/notification/email/send",
      body: "*",
    };
  }

  rpc sendKafkaNotification (KafkaNotificationRequest) returns (KafkaNotificationResponse) {
    option(google.api.http) = {
      post: "/v1/notification/kafka/send",
      body: "*",
    };
  }
}

message EmailNotificationRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
}

message EmailNotificationResponse {
  bool success = 1;
  string error = 2;
}

message KafkaNotificationRequest {
  string user_id = 1;
  string message = 2;
}

message KafkaNotificationResponse {
  bool success = 1;
  string error = 2;
}